--- a/week-2/02-nodejs/package.json
+++ b/week-2/02-nodejs/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "test-fileServer": "./node_modules/jest/bin/jest.js ./tests/fileServer.test.js",
-    "test-todoServer": "./node_modules/jest/bin/jest.js ./tests/todoServer.test.js"
+    "test-fileServer": "jest ./tests/fileServer.test.js",
+    "test-todoServer": "./node_modules/jest/bin/jest.js ./tests/todoServer.test.js",
+    "start": "nodemon todoServer.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "nodemon": "^3.0.3",
     "uuid": "^9.0.0"
   }
 }
