--- a/week-3/01-middlewares/package.json
+++ b/week-3/01-middlewares/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon 01-requestCount.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.3",
     "supertest": "^6.3.3"
   },
   "devDependencies": {
